# nostr-finder

./: Cargo.toml  README.md  relays.yaml
src/: main.rs
