[package]
name = "nostreventfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_yaml = "0.9.17"
serde = "1.0.152"
serde_json = "1.0.91"
minreq = "2.6.0"
nostr-types = { git = "https://github.com/mikedilger/nostr-types" }
thiserror = "1"
tungstenite = "0.18.0"
url = "2.3.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
